fix pagination gap and table remove table header

--- a/source/stylesheets/_tables.sass
+++ b/source/stylesheets/_tables.sass
@@ -33,6 +33,8 @@ tfoot
   tr
     padding: 1em 0
     border-top: 1px solid $gray-lighter
+    &:first-child
+      border-top: 0
   thead
     display: none
   td
